src/styles/global.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');

:root {
  --darkest-purple: #2a153c;
  --dark-purple: #331c52;
  --medium-purple: #bf8cbf;
  --light-purple: #e2b1e2;
  --lightest-purple: #f6d8f6;
  --off-white: #e9e9e9;
  --light-grey: #666666;
  --dark-grey: #414141;
}

// cannot use transition all because of color attribute
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: 
    background-color 0.3s ease, 
    transform 0.3s ease, 
    border 0.3s ease, 
    border-color 0.3s ease, 
    filter 0.3s ease,
    padding 0.3s ease,
    margin 0.3s ease;
}

body {
  font-family: 'Roboto', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  color: #2c3e50;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

html {
  scroll-behavior: smooth;
}

a {
  color: inherit;
  text-decoration: none;
}

p {
  margin-bottom: 0;
}

.centered {
  display: flex;
  justify-content: center;
  align-items: center;
}

h2, h3, h4 {
  margin: 0;
  font-family: 'Roboto', sans-serif;
}

h1 {
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  font-size: 70px;
  font-weight: 1000;
  line-height: 1.5;
  margin-bottom: 0;
  border-radius: 10px;
  color: var(--medium-purple);
}

.h1-dark-bg:hover {
  background-color: var(--dark-purple);
  color: white;
  transform: scale(1.1) rotate(-3deg);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
  filter: brightness(130%);
}

.h1-light-bg:hover {
  background-color: var(--lightest-grey);
  color: black;
  transform: scale(1.1) rotate(-2deg);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
}

h2 { 
  font-size: 30px;
  font-weight: 700;
  line-height: 1;
  color: var(--light-purple);
}

.h2-dark-bg:hover {
  border-radius: 5px;
  padding: 10px 35px;
  color: var(--dark-purple);
  background-color: var(--medium-purple);
}

.h2-light-bg:hover {
  border-radius: 5px;
  padding: 10px 35px;
  color: var(--dark-purple);
  background-color: var(--medium-purple);
}

h3 {
  font-size: 22px;
  font-weight: 700;
  line-height: 1.2;
}

h4 {
  font-size: 18px;
  font-weight: 700;
  line-height: 1.2;
}

.quote-purple {
  color: var(--medium-purple);
  font-style: italic;
  font-size: 18px;
}

.quote-grey {
  color: var(--dark-grey);
  font-style: italic;
  font-size: 18px;
}

